Removed cause of several deprecation warnings