@@ -257,7 +257,7 @@ public class WebdavStatus {
    *         (e.g., "OK").
    */
   public static String getStatusText(int nHttpStatusCode) {
-    Integer intKey = new Integer(nHttpStatusCode);
+    Integer intKey = Integer.valueOf(nHttpStatusCode);
 
     if (!_mapStatusCodes.containsKey(intKey)) {
       return "";
@@ -278,7 +278,7 @@ public class WebdavStatus {
    *          [IN] HTTP status text
    */
   private static void addStatusCodeMap(int nKey, String strVal) {
-    _mapStatusCodes.put(new Integer(nKey), strVal);
+    _mapStatusCodes.put(Integer.valueOf(nKey), strVal);
   }
 
 };
