@@ -539,7 +539,7 @@ public class DoPropfind extends AbstractMethod {
       }
 
       int timeout = (int) (lo.getTimeoutMillis() / 1000);
-      String timeoutStr = new Integer(timeout).toString();
+      String timeoutStr = Integer.valueOf(timeout).toString();
       generatedXML.writeElement("DAV::timeout", XMLWriter.OPENING);
       generatedXML.writeText("Second-" + timeoutStr);
       generatedXML.writeElement("DAV::timeout", XMLWriter.CLOSING);
